# canary

./: .envrc.example.sh  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: pytest-with-poetry.yaml
adversarial_prompts/: README.md  haha-pwned-acrostic.txt  haha-pwned-advanced.txt  haha-pwned-basic.txt  translation-leakage.txt
canary/src/: chains.py  integrity.py  main.py  schema.py
canary/src/prompts/: chatbot.txt  integrity.txt
canary/tests/: helpers.py  test_api.py  test_integrity.py
canary/tests/adversarial_prompts/: haha-pwned-acrostic.txt
integrity/src/: chains.py  main.py
integrity/src/prompts/: chatbot.txt  integrity.txt
integrity/tests/: test_integrity.py
