[tool.poetry]
name = "canary"
version = "0.1.0"
description = "LLM prompt injection detection."
authors = ["Zachary Smith <zachsmith.dev@gmail.com>"]
packages = [{include = "canary"}]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Cutwell/canary"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.295"
fastapi = "^0.103.1"
openai = "^0.28.0"
uvicorn = "^0.23.2"
pydantic = "^2.3.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pre-commit = "^3.4.0"
pytest = "^7.4.2"
httpx = "^0.25.0"
coverage = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
